[sgen] Allow read only access on block list

--- a/mono/sgen/Makefile.am
+++ b/mono/sgen/Makefile.am
@@ -56,6 +56,7 @@ monosgen_sources = \
 	sgen-pointer-queue.c \
 	sgen-pointer-queue.h \
 	sgen-array-list.h \
+	sgen-array-list.c \
 	sgen-protocol-def.h \
 	sgen-protocol.c \
 	sgen-protocol.h \
